--- a/src/core/default-forrest.properties
+++ b/src/core/default-forrest.properties
@@ -42,7 +42,7 @@ project.skins-dir=${project.content-dir}/skins
 project.skinconf=${project.content-dir}/skinconf.xml
 project.lib-dir=${project.content-dir}/lib
 project.classes-dir=${project.content-dir}/classes
-project.translations-dir=${project.content-dir}/classes
+project.translations-dir=${project.content-dir}/translations
 
 
 ##############
