Move Jetty to tools/jetty. In the shbat distro they are copied in /jetty
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8965 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -259,6 +259,12 @@
       <fileset dir="lib/core" includes="resolver*.jar"/>
     </copy>
 
+    <!-- Copy Jetty jars, so the shbat distribution is self-contained -->
+    <mkdir dir="${dist-shbat.dir}/jetty" />
+    <copy todir="${dist-shbat.dir}/jetty">
+      <fileset dir="tools/jetty" />
+    </copy>
+    
     <!-- Fix bin/ permissions -->
     <fixcrlf eol="crlf" srcdir="${dist-shbat.dir}/bin" includes="*.bat"/>
     <fixcrlf eol="lf" srcdir="${dist-shbat.dir}/bin" excludes="*.bat"/>
