Move Jetty to tools/jetty. In the shbat distro they are copied in /jetty
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8966 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -54,6 +54,7 @@
     
     <path id="classpath">
       <fileset dir="lib" includes="**/*.jar"/>
+      <fileset dir="tools/jetty" includes="servlet*.jar"/>
       <pathelement location="${tools.jar}"/>
     </path>
 
