Fix the bug on the raw content.
Now the property for raw content is set to a default if it's not set in
the project forrest.properties.


git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8967 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/default-forrest.properties
+++ b/src/core/default-forrest.properties
@@ -30,6 +30,7 @@
 
 project.status=status.xml
 project.content-dir=src/documentation
+project.raw-content-dir=${project.content-dir}/content
 project.conf-dir=${project.content-dir}/conf
 project.sitemap-dir=${project.content-dir}
 project.xdocs-dir=${project.content-dir}/content/xdocs
