Fix the error in the forrest build that happens if there is no jar in lib/optional Thanks to Ross Gardler for reporting.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8972 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -248,7 +248,9 @@
     </copy>
     <mkdir dir="${dist-shbat.dir}/lib" />
     <copy todir="${dist-shbat.dir}/lib">
-      <fileset dir="./lib" includes="*/*.jar"/>
+      <!-- copy everything so that also dirs with no jars are there, as
+           the forrest build expects these dirs to be present. -->
+      <fileset dir="./lib" includes="*/*.*"/>
     </copy>
     
     <!-- Copy Ant jars, so the shbat distribution is self-contained -->
