--- a/etc/cocoon_upgrade/local.blocks.properties
+++ b/etc/cocoon_upgrade/local.blocks.properties
@@ -3,42 +3,47 @@
 #------------------------------------------------------------------------------#
 
 # Remove blocks from your cocoon distribution by uncommenting the 
-# corresponding exclude property
+# corresponding exclude property.
 
-# NOTE: don't modify this file directly but make a copy named 
+# NOTE: Don't modify this file directly but make a copy named 
 # 'local.blocks.properties' and modify that. The build system will override
 # these properties with the ones in the 'local.blocks.properties' file.
 
+# NOTE: "dependency" indicates blocks that are required by other blocks.
+# disabling batik, for example, will prevent fop from compiling.
+
+
 # Stable blocks ----------------------------------------------------------------
 
-# stable blocks are those that can be considered ready for production and
+# Stable blocks are those that can be considered ready for production and
 # will contain components and API that will remain stable and where
-# developers are committed to back compatibility. In short, stuff you can
-# depend on.
+# developers are committed to back compatibility. In short, stuff that you
+# can depend on.
 
-exclude.block.authentication-fw=true
+#exclude.block.fop=true
+#-----[dependency]: "batik" needed by "fop"
 #exclude.block.batik=true
+#-----[dependency]: "databases" needed by "repository"
+exclude.block.databases=true
+exclude.block.hsqldb=true
 exclude.block.bsf=true
 #exclude.block.chaperon=true
-exclude.block.databases=true
-exclude.block.deli=true
-#exclude.block.fop=true
-exclude.block.hsqldb=true
 #exclude.block.html=true
 exclude.block.itext=true
 exclude.block.jfor=true
 exclude.block.jsp=true
 exclude.block.jxforms=true
 #exclude.block.linkrewriter=true
-exclude.block.lucene=true
+#exclude.block.lucene=true
 exclude.block.naming=true
 exclude.block.php=true
 exclude.block.poi=true
 exclude.block.portal-fw=true
 #exclude.block.profiler=true
 exclude.block.python=true
+exclude.block.authentication-fw=true
+#-----[dependency]: "session-fw" needed by "authentication-fw"
 exclude.block.session-fw=true
-exclude.block.slide=true
 exclude.block.swf=true
 exclude.block.velocity=true
 exclude.block.web3=true
@@ -47,39 +52,48 @@ exclude.block.xmldb=true
 
 # Unstable blocks --------------------------------------------------------------
 
-# unstable blocks are currently under development and do not guarantee the
+# unstable blocks are currently under development and do not guarantee that the
 # contracts they expose (API, xml schema, properties, behavior) will remain 
 # constant in time. Developers are not committed to back-compatibility just yet.
 # This doesn't necessarily mean the blocks implementation is unstable or 
 # the code can't be trusted for production, but use with care and watch
-# its development as thing might change over time before they are marked
+# its development as things might change over time before they are marked
 # stable.
 
 exclude.block.apples=true
 #exclude.block.asciiart=true
 exclude.block.axis=true
+exclude.block.scratchpad=true
+#-----[dependency]: "cron" needed by "scratchpad"
 exclude.block.cron=true
+exclude.block.deli=true
+#-----[dependency]: "eventcache" needed by "repository"
 exclude.block.eventcache=true
+exclude.block.jms=true
+#-----[dependency]: "slide" and "webdav" need "repository"
+exclude.block.repository=true
+exclude.block.slide=true
+exclude.block.webdav=true
 exclude.block.linotype=true
 exclude.block.mail=true
 exclude.block.midi=true
-exclude.block.qdox=true
 exclude.block.petstore=true
+exclude.block.portal=true
 exclude.block.precept=true
 exclude.block.proxy=true
-exclude.block.portal=true
-exclude.block.scratchpad=true
+exclude.block.qdox=true
 exclude.block.slop=true
 exclude.block.stx=true
 exclude.block.taglib=true
-exclude.block.webdav=true
 exclude.block.woody=true
 
-
+# Before including the "ojb" block, see: http://wiki.cocoondev.org/Wiki.jsp?page=OJBBlock
+exclude.block.ojb=true
 
 # Deprecated blocks ------------------------------------------------------------
 
-# Although these blocks are stable they have been deprecated in favour of other
-# blocks.
+# Although some of these blocks may have been stable, they are now deprecated
+# in favour of other blocks and therefore are excluded by default from the build
 
 exclude.block.xmlform=true
+exclude.javadocs=true
