Updated Entity Resolver from pre-release to official xml-commons-resolver-1.1 release (no real changes).
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9006 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -260,7 +260,7 @@
       <fileset dir="tools/ant" />
     </copy>
     <copy todir="${dist-shbat.dir}/ant/lib">
-      <fileset dir="lib/core" includes="resolver*.jar"/>
+      <fileset dir="lib/core" includes="xml-commons-resolver*.jar"/>
     </copy>
 
     <!-- Copy Jetty jars, so the shbat distribution is self-contained -->
