Update Forrestbar links and remove source filtering.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9034 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/forrestbar/build.xml
+++ b/src/forrestbar/build.xml
@@ -18,18 +18,7 @@
     <mkdir dir="${build.dir}/work/forrestbar" />
     <mkdir dir="${build.dir}/work/forrestbar-jar" />
     <copy todir="${build.dir}/work/forrestbar-jar" overwrite="true">
-      <fileset dir="${xpi.dir}" 
-               includes="content/**/*.xul" />
-      <filterset>
-        <filter token="EMBEDDED_NAME" value="${forrestbot.links.forrest.local-embedded.name}"/>
-        <filter token="EMBEDDED_URL" value="${forrestbot.links.forrest.local-embedded.url}"/> 
-        <filter token="WEBAPP_NAME" value="${forrestbot.links.forrest.local-webapp.name}"/>
-        <filter token="WEBAPP_URL" value="${forrestbot.links.forrest.local-webapp.url}"/> 
-      </filterset>
-    </copy>
-    <copy todir="${build.dir}/work/forrestbar-jar" overwrite="true">
-      <fileset dir="${xpi.dir}" 
-               excludes="content/**/*.xul" />
+      <fileset dir="${xpi.dir}" />
     </copy>
     <jar jarfile="${build.dir}/work/forrestbar/forrestbar.jar">
       <fileset dir="${build.dir}/work/forrestbar-jar" includes="content/**/*" />
