look for forrest.properties in user home before going to default values; clean seperation of properties in default-forrest.properties from properties set for internal use in forrest.build.xml
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9060 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/default-forrest.properties
+++ b/src/core/default-forrest.properties
@@ -6,18 +6,17 @@
 #forrest.echo=true 
 
 # Project name (used to name .war file)
-#project.name=my-project
+project.name=my-project
 
 # Specifies name of Forrest skin to use
-#project.skin=forrest-site
+project.skin=forrest-site
 #project.skin=forrest-css
 #project.skin=avalon-tigris
 #project.skin=krysalis-site
 
-
 ##############
 # behavioural properties
-#project.menu-scheme=tab_attributes
+project.menu-scheme=tab_attributes
 #project.menu-scheme=directories
 
 ##############
@@ -53,7 +52,7 @@ project.translations-dir=${project.content-dir}/translations
 project.catalog=${project.schema-dir}/catalog.xcat
 
 # The verbosity level for the entity resolver (1..10)
-#forrest.catalog.verbosity=1
+forrest.catalog.verbosity=1
 
 
 ##############
@@ -109,13 +108,15 @@ project.catalog=${project.schema-dir}/catalog.xcat
 # General Forrest properties
 
 # The URL to start crawling from
-#project.start-uri=index.html
+project.start-uri=index.html
 # Set logging level for messages printed to the console
 # (DEBUG, INFO, WARN, ERROR, FATAL_ERROR)
-#project.debuglevel=ERROR
+project.debuglevel=ERROR
 # Max memory to allocate to Java
-#forrest.maxmemory=64m
+forrest.maxmemory=64m
 # Any other arguments to pass to the JVM. For example, to run on an X-less
 # server, set to -Djava.awt.headless=true
-#forrest.jvmargs=
+forrest.jvmargs=
+project.bugtracking-url=
 #project.bugtracking-url=http://nagoya.apache.org/bugzilla/show_bug.cgi?id=
+project.i18n=false
