Welcome tigris-style :-)
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9064 13f79535-47bb-0310-9956-ffa450edef68

--- a/forrest.properties
+++ b/forrest.properties
@@ -7,6 +7,7 @@ project.name=forrest
 #project.skin=forrest-css
 #project.skin=krysalis-site
 #project.skin=avalon-tigris
+#project.skin=tigris-style
 
 forrest.validate.xdocs.excludes=site.xml,*.dtdx.xml
 project.bugtracking-url=http://issues.cocoondev.org/jira/secure/ViewIssue.jspa?key=
