cocoon doesn't like an empty bugtracking url
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9065 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/default-forrest.properties
+++ b/src/core/default-forrest.properties
@@ -117,6 +117,5 @@ forrest.maxmemory=64m
 # Any other arguments to pass to the JVM. For example, to run on an X-less
 # server, set to -Djava.awt.headless=true
 forrest.jvmargs=
-project.bugtracking-url=
-#project.bugtracking-url=http://nagoya.apache.org/bugzilla/show_bug.cgi?id=
+project.bugtracking-url=http://nagoya.apache.org/bugzilla/show_bug.cgi?id=
 project.i18n=false
