move build dir so it's more accessible by webapp
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9081 13f79535-47bb-0310-9956-ffa450edef68

--- a/scratchpad/forrestbot2/core/build.xml
+++ b/scratchpad/forrestbot2/core/build.xml
@@ -1,7 +1,7 @@
 <project name="build">
 
   <property name="build.work-dir"         location="work/${ant.project.name}"/>
-  <property name="build.site-dir"         location="work/${ant.project.name}/site"/>
+  <property name="build.site-dir"         location="build/${ant.project.name}"/>
   <tstamp>
     <format property="logtime" pattern="yyMMdd-hhmm"/>
   </tstamp>
