view 'built' sites not locally 'deployed' sites; local welcome page; table of statuses on front
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9082 13f79535-47bb-0310-9956-ffa450edef68

--- a/scratchpad/forrestbot2/webapp/WEB-INF/settings.properties
+++ b/scratchpad/forrestbot2/webapp/WEB-INF/settings.properties
@@ -5,21 +5,21 @@
 #
 # this file is created by the webapp and used by the 'overseer' script
 #commands-file=/path/to/somewhere/commands
-# directory that contains the configuration files for each site
+# directory that contains the forrestbot definition files for each site
 #config-dir=/path/to/somewhere/conf
 #
 # filesystem paths
-#sites-dir=/path/to/somewhere/sites
+#build-dir=/path/to/somewhere/build
 #logs-dir=/path/to/somewhere/logs
 #
 # URLs (for HTML links)
-#sites-url=/forrestbot/sites
-#logs-url=/forrestbot/logs
+#build-url=build
+#logs-url=logs
 
-commands-file=d:/sandbox/javadev/forrestbot2/commands
-config-dir=d:/sandbox/javadev/forrestbot2
+commands-file=/home/dpb2/forrest/xml-forrest/scratchpad/forrestbot2/commands
+config-dir=/home/dpb2/forrest/xml-forrest/scratchpad/forrestbot2
 
-sites-dir=d:/sandbox/javadev/forrest/build/site/projects
-logs-dir=d:/sandbox/javadev/forrest/build/site/projects-logs
-sites-url=/projects
-logs-url=/projects-logs
+build-dir=/home/dpb2/forrest/xml-forrest/scratchpad/forrestbot2/build
+logs-dir=/home/dpb2/forrest/xml-forrest/scratchpad/forrestbot2/logs
+build-url=/build
+logs-url=/logs
