--- a/scratchpad/forrestbot2/webapp/WEB-INF/users.properties
+++ b/scratchpad/forrestbot2/webapp/WEB-INF/users.properties
@@ -13,8 +13,5 @@
 #   <modules> is a comma-separated list of sites
 #     - '^' will allow the user to do his actions on all sites
 
-forrest-dev=refresh,xml-forrest,xml-forrest-krysalis,xml-forrest-template,xml-site,incubator-site,xml-xindice,xml-fop.xml,avalon-site,avalon-phoenix,krysalis-centipede,ws-site
+forrest-dev=build,deploy,xml-forrest,xml-forrest-krysalis,xml-forrest-template,xml-site,incubator-site,xml-xindice,xml-fop.xml,avalon-site,avalon-phoenix,krysalis-centipede,ws-site
 forrest-dev.password=forrest-dev
-
-javadev=build,deploy,*
-javadev.password=javadev
