<action dev="NKB" type="update" context="core">         Removed all validation includes and excludes from the fresh site,         except the most basic one. This means that the feature is to         be considered deprecated.       </action>
Also removed avalon-tigris as deprecated.


git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9099 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/fresh-site/forrest.properties
+++ b/src/core/fresh-site/forrest.properties
@@ -11,7 +11,6 @@
 # Specifies name of Forrest skin to use
 #project.skin=forrest-site
 #project.skin=forrest-css
-#project.skin=avalon-tigris
 #project.skin=krysalis-site
 #project.skin=tigris-style
 
@@ -57,51 +56,15 @@
 ##############
 # validation properties
 
-# These props determine if validation is performed at all
-# Values are inherited unless overridden.
-# Eg, if forrest.validate=false, then all others are false unless set to true.
+# Determine if validation is performed
 #forrest.validate=true
-#forrest.validate.xdocs=${forrest.validate}
-#forrest.validate.skinconf=${forrest.validate}
-#forrest.validate.sitemap=${forrest.validate}
-#forrest.validate.stylesheets=${forrest.validate}
-#forrest.validate.skins=${forrest.validate}
-#forrest.validate.skins.stylesheets=${forrest.validate.skins}
 
-
-# Key:
 # *.failonerror=(true|false)    stop when an XML file is invalid
-# *.includes=(pattern)         Comma-separated list of path patterns to validate
-# *.excludes=(pattern)         Comma-separated list of path patterns to not validate
-
 #forrest.validate.failonerror=true
-#forrest.validate.includes=**/*
+
+# *.excludes=(pattern)         Comma-separated list of path patterns to not validate
 #forrest.validate.excludes=
-#
-#forrest.validate.xdocs.failonerror=${forrest.validate.failonerror}
-#
-#forrest.validate.xdocs.includes=**/*.x*
-#forrest.validate.xdocs.excludes=site.xml
-#
-#forrest.validate.skinconf.includes=${skinconf-file}
-#forrest.validate.skinconf.excludes=
-#forrest.validate.skinconf.failonerror=${forrest.validate.failonerror}
-#
-#forrest.validate.sitemap.includes=${sitemap-file}
-#forrest.validate.sitemap.excludes=
-#forrest.validate.sitemap.failonerror=${forrest.validate.failonerror}
-#
-#forrest.validate.stylesheets.includes=**/*.xsl
-#forrest.validate.stylesheets.excludes=
-#forrest.validate.stylesheets.failonerror=${forrest.validate.failonerror}
-#
-#forrest.validate.skins.includes=**/*
-#forrest.validate.skins.excludes=**/*.xsl
-#forrest.validate.skins.failonerror=${forrest.validate.failonerror}
-#
-#forrest.validate.skins.stylesheets.includes=**/*.xsl
-#forrest.validate.skins.stylesheets.excludes=
-#forrest.validate.skins.stylesheets.failonerror=${forrest.validate.skins.failonerror}
+
 
 ##############
 # General Forrest properties
