Fix the 'test' target by using the new forrest-targets.xml buildfile in fresh-site.
Now a 'build test' does a test run on fresh-site in the build dir and
checks that Forrest is not broken.


git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9114 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -352,11 +352,16 @@
     <ant antfile="${forrest.home}/forrest.build.xml" target="seed">
       <property name="forrest.home" value="${dist-shbat.dir}" />  
       <property name="project.home" value="${test.dir}"/>
-    </ant>    
+    </ant>
+    
+    <ant antfile="${test.dir}/forrest-targets.xml" target="site"/>
+    
+
+    <!--    
     <ant antfile="${forrest.home}/forrest.build.xml" target="site">
       <property name="forrest.home" value="${dist-shbat.dir}" />  
       <property name="project.home" value="${test.dir}"/>
-    </ant>
+    </ant>-->
   </target>
   
   <!-- ================================== -->
