Add a cvsignore file to the build dir, so that cvs ignores it even if it's moved elsewhere.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9150 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -52,7 +52,9 @@
     </echo>
     
     <mkdir dir="${build.dir}"/>
-    
+    <!-- this is put so that CVS ignores the contents even if the build dir is renamed -->
+    <copy file="src/core/var/full.cvsignore" tofile="${build.dir}/.cvsignore"/>
+        
     <path id="classpath">
       <fileset dir="lib" includes="**/*.jar"/>
       <fileset dir="tools/jetty" includes="servlet*.jar"/>
