<action dev="DB" type="add" context="build" fixes-bug="FOR-108">         New 'clean-dist' target for build.xml, which is now the default target.       </action>
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9172 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<project default="dist" basedir="." name="Forrest build file">
+<project default="clean-dist" basedir="." name="Forrest build file">
 
   <import file="src/forrestbar/build.xml"/>
   
@@ -184,6 +184,10 @@
   <target name="dist" 
     description="Makes all the known incarnations of forrest"
     depends="dist-shbat" />
+
+  <target name="clean-dist" 
+    description="Cleans and makes all the known incarnations of forrest"
+    depends="clean, dist" />
 
 
   <!-- =================================================================== -->
