Move the copy of .cvsignore to another target so is not going to be removed
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9173 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<project default="clean-dist" basedir="." name="Forrest build file">
+<project default="dist" basedir="." name="Forrest build file">
 
   <import file="src/forrestbar/build.xml"/>
   
@@ -52,8 +52,6 @@
     </echo>
     
     <mkdir dir="${build.dir}"/>
-    <!-- this is put so that CVS ignores the contents even if the build dir is renamed -->
-    <copy file="src/core/var/full.cvsignore" tofile="${build.dir}/.cvsignore"/>
         
     <path id="classpath">
       <fileset dir="lib" includes="**/*.jar"/>
@@ -183,12 +181,7 @@
   <!-- =================================================================== -->
   <target name="dist" 
     description="Makes all the known incarnations of forrest"
-    depends="dist-shbat" />
-
-  <target name="clean-dist" 
-    description="Cleans and makes all the known incarnations of forrest"
-    depends="clean, dist" />
-
+    depends="clean,dist-shbat" />
 
   <!-- =================================================================== -->
   <!-- Validate the important core configuration files                     -->
@@ -391,6 +384,8 @@
   <!-- =================================================================== -->
   <target name="compile" depends="init">
     <mkdir dir="${build.classes}"/>
+    <!-- this is put so that CVS ignores the contents even if the build dir is renamed -->
+	<copy file="src/core/var/full.cvsignore" tofile="${build.dir}/.cvsignore"/>
     <javac srcdir=   "${java.dir}"
       destdir=       "${build.classes}"
       debug=         "${build.compiler.debug}"
