--- a/forrest.properties
+++ b/forrest.properties
@@ -2,11 +2,11 @@
 # Properties used by forrest.build.xml for building the website
 ##############
 
-project.name=forrest
+#project.name=forrest
 #project.skin=forrest-site
 #project.skin=forrest-css
 #project.skin=krysalis-site
 #project.skin=avalon-tigris
-#project.skin=tigris-style
+project.skin=tigris-style
 
 project.bugtracking-url=http://issues.cocoondev.org/jira/secure/ViewIssue.jspa?key=
