<action dev="DB" type="update" context="skins">  Support multiple skin descriptor files via the forrest.skins.descriptors property </action>
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9202 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/default-forrest.properties
+++ b/src/core/default-forrest.properties
@@ -14,6 +14,9 @@ project.skin=forrest-site
 #project.skin=avalon-tigris
 #project.skin=krysalis-site
 
+# comma seperated list, file:/// is supported
+forrest.skins.descriptors=http://xml.apache.org/forrest/skins/skins.xml
+
 ##############
 # behavioural properties
 project.menu-scheme=tab_attributes
