--- a/src/core/fresh-site/forrest.properties
+++ b/src/core/fresh-site/forrest.properties
@@ -14,6 +14,9 @@
 #project.skin=krysalis-site
 #project.skin=tigris-style
 
+# comma seperated list, file:/// is supported
+#forrest.skins.descriptors=http://xml.apache.org/forrest/skins/skins.xml,file:///c:/myskins/skins.xml
+
 ##############
 # behavioural properties
 #project.menu-scheme=tab_attributes
