Use tmp as the only temporal directory
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9212 13f79535-47bb-0310-9956-ffa450edef68

--- a/scratchpad/convert/anakiaNmaven/build.xml
+++ b/scratchpad/convert/anakiaNmaven/build.xml
@@ -5,7 +5,7 @@
     <property name="src.dir" location="${xdocs.dir}"/>
     <!--<property name="src.format" value="maven"/>
     <property name="target.format" value="forrest"/>-->
-    <property name="dest.dir" value="${user.dir}/temp"/>
+    <property name="dest.dir" value="${user.dir}/tmp"/>
     <property name="converter.xsl" location="anakiaNmaven2document11.xsl"/>
     <property name="book2project.xsl" location="projectNnavigation2book.xsl"/>
 
